[tool.poetry]
name = "calhoun"
version = "0.1.0"
description = ""
authors = ["workbench-interactive-analysis"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
flask = "2.2.5"
flask-cors = "3.0.10"
flask-talisman = "0.7.0"
flask-swagger-ui = "3.36.0"
nbconvert = ">=6.0.7"
nbformat = "5.1.3"
requests = ">=2.25.1"
rpy2 = "3.4.4"
beautifulsoup4 = "4.10.0"
idna = "^3.4"
async-generator = "^1.10"
attrs = "^22.2.0"
bleach = "^6.0.0"
certifi = "^2022.12.7"
cffi = "^1.15.1"
chardet = "^5.1.0"
click = "^8.1.3"
defusedxml = "^0.7.1"
entrypoints = "^0.4"
ipython-genutils = "^0.2.0"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
jsonschema = "^4.17.3"
jupyter-client = "^8.0.3"
jupyter-core = "^5.2.0"
jupyterlab-pygments = "^0.2.2"
mistune = "^2.0.5"
nbclient = "^0.7.2"
nest-asyncio = "^1.5.6"
packaging = "^23.0"
pandocfilters = "^1.5.0"
pycparser = "^2.21"
pygments = "^2.14.0"
pyparsing = "^3.0.9"
pyrsistent = "^0.19.3"
python-dateutil = "^2.8.2"
pytz = "^2022.7.1"
pyzmq = "^25.0.0"
six = "^1.16.0"
testpath = "^0.6.0"
tornado = "^6.2"
traitlets = "^5.9.0"
tzlocal = "^4.2"
urllib3 = "^1.26.14"
webencodings = "^0.5.1"
werkzeug = "^2.2.3"
zipp = "^3.15.0"
markupsafe = "^2.1.2"
gunicorn = "^22.0.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
